--- a/src/main/java/com/micrositescreenloadtime/config/config.properties
+++ b/src/main/java/com/micrositescreenloadtime/config/config.properties
@@ -40,10 +40,6 @@ LSurl = https://preprod.embibe.com/ladakh/student/in-en/
 LTurl = https://preprod.embibe.com/ladakh/educator/in-en/
 TESurl = https://preprod.embibe.com/telangana/student/in-en/
 TETurl = https://preprod.embibe.com/telangana/educator/in-en/
-SKSurl = https://preprod.embibe.com/sikkim/student/in-en/
-SKTurl = https://preprod.embibe.com/sikkim/educator/in-en/
-CHSurl = https://preprod.embibe.com/chhattisgarh/student/in-hi/
-CHTurl = https://preprod.embibe.com/chhattisgarh/educator/in-hi/
 ANSurl = https://preprod.embibe.com/andhrapradesh/student/in-en/
 ANTurl = https://preprod.embibe.com/andhrapradesh/educator/in-en/
 ARSurl = https://preprod.embibe.com/arunachalpradesh/student/in-en/
@@ -56,3 +52,6 @@ MHSurl = https://preprod.embibe.com/maharashtra/student/in-mr/
 MHTurl = https://preprod.embibe.com/maharashtra/educator/in-mr/
 JKSurl = https://preprod.embibe.com/jammukashmir/student/in-en/
 JKTurl = https://preprod.embibe.com/jammukashmir/educator/in-en/
+PRurl = https://stage.embibe.com/in-en/press-releases/
+ADPurl = https://preprod.embibe.com/adp/administrator/in-en/
+
