--- a/src/main/java/com/micrositescreenloadtime/config/config.properties
+++ b/src/main/java/com/micrositescreenloadtime/config/config.properties
@@ -52,6 +52,6 @@ MHSurl = https://preprod.embibe.com/maharashtra/student/in-mr/
 MHTurl = https://preprod.embibe.com/maharashtra/educator/in-mr/
 JKSurl = https://preprod.embibe.com/jammukashmir/student/in-en/
 JKTurl = https://preprod.embibe.com/jammukashmir/educator/in-en/
-PRurl = https://stage.embibe.com/in-en/press-releases/
-ADPurl = https://preprod.embibe.com/adp/administrator/in-en/
+ESurl = https://www.embibe.co.in/
+ADPurl = https://www.embibe.co.in/
 
